--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,9 @@
-version: "3"
+version: '2'
+
 services:
-  site:
-    command: jekyll serve
-    image: jekyll/minimal:latest
+  jekyll:
+    build: .
     volumes:
-      - $PWD:/srv/jekyll
-      - $PWD/vendor/bundle:/usr/local/bundle
+      - .:/site
     ports:
-      - 4000:4000
-      - 35729:35729
-      - 3000:3000
-      -   80:4000
+      - '80:4000'
